--- a/static/stylesheets/sequencejs-theme.modern-slide-in.css
+++ b/static/stylesheets/sequencejs-theme.modern-slide-in.css
@@ -38,7 +38,7 @@ Aside from these comments, you may modify and distribute this file as you please
 	
 	overflow-x: visible;
 	
-	/*max-width: 1280px;*/
+	max-width: 1280px;
 	width: 100%;
 }
 
