--- a/static/stylesheets/sequencejs-theme.modern-slide-in.css
+++ b/static/stylesheets/sequencejs-theme.modern-slide-in.css
@@ -23,10 +23,12 @@ Aside from these comments, you may modify and distribute this file as you please
 #sequence h5 .button { font-size: 0.875em; width: 340px; }
 
 
-#header-container{
+#header-container {
 	background:  #222;
 	width: 100%;
 	overflow: hidden;
+	height: 540px;
+	z-index: 1;
 }
 
 #header {
@@ -40,6 +42,7 @@ Aside from these comments, you may modify and distribute this file as you please
 	
 	max-width: 1280px;
 	width: 100%;
+	
 }
 
 
